chore: enable permissive CORS policy to allow all origins