@@ -60,11 +60,8 @@ public class WebSecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        // Explicitly allow development and production origins since allowCredentials is true
-        configuration.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",
-                "https://soluxe-erp-frontend-production.up.railway.app"
-        ));
+        // Allow all origins while supporting allowCredentials(true)
+        configuration.setAllowedOriginPatterns(List.of("*"));
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
         configuration.setExposedHeaders(List.of("X-Auth-Token"));
